<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    >
    
    <ScrollView
        android:id="@+id/gpstracker_tile_download_alert_dialog_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/gpstracker_tile_download_north_lat"
                />
            <EditText
                android:id="@+id/gpstracker_tile_download_alert_dialog_cache_north"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number|numberDecimal|numberSigned"
                android:digits="1234567890.-"
                android:gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/gpstracker_tile_download_south_lat"
                />
            <EditText
                android:id="@+id/gpstracker_tile_download_alert_dialog_cache_south"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number|numberDecimal|numberSigned"
                android:digits="1234567890.-"
                android:gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/gpstracker_tile_download_east_lon"
                />
            <EditText
                android:id="@+id/gpstracker_tile_download_alert_dialog_cache_east"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number|numberDecimal|numberSigned"
                android:digits="1234567890.-"
                android:gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/gpstracker_tile_download_west_lon"
                />
            <EditText
                android:id="@+id/gpstracker_tile_download_alert_dialog_cache_west"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number|numberDecimal|numberSigned"
                android:digits="1234567890.-"
                android:gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/gpstracker_tile_download_zoom_level_min"
                />
            <SeekBar
                android:id="@+id/gpstracker_tile_download_alert_dialog_slider_zoom_min"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/gpstracker_tile_download_alert_dialog_zoom_min_current"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/gpstracker_tile_download_zoom_level_max"
                />
            <SeekBar
                android:id="@+id/gpstracker_tile_download_alert_dialog_slider_zoom_max"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/gpstracker_tile_download_alert_dialog_zoom_max_current"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/gpstracker_tile_download_tiles_count_estimate"
                />
            <TextView
                android:id="@+id/gpstracker_tile_download_alert_dialog_cache_estimate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/gpstracker_tile_download_archive_name"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                >

                <EditText
                    android:id="@+id/gpstracker_tile_download_alert_dialog_cache_output"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="archive"
                    android:text="archive"
                    android:lines="1"
                    android:gravity="center"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gpstracker_tile_download_file_extension"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                >

                <Button
                    android:id="@+id/gpstracker_tile_download_alert_dialog_execute_job"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gpstracker_tile_download_start_download_button"/>
                <Button
                    android:id="@+id/gpstracker_tile_download_alert_dialog_cancel_alert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>