...
    <string name="gpstracker_item_tracks_import_button_text">Import</string>
    <string name="gpstracker_item_tracks_export_button_text">Export</string>

    <string name="gpstracker_list_geomodels_selection_done_text">Done Selection</string>

    <string name="gpstracker_tile_settings_save_text">Save as default</string>
    <string name="gpstracker_cache_manager">Cache Manager</string>
    <string name="gpstracker_cache_current_size">Cache Current Size</string>
    <string name="gpstracker_cache_download">Start Download</string>
    <string name="gpstracker_tile_download_file_extension">.sqlite</string>
    <string name="gpstracker_tile_download_north_lat">Northern most Latitude</string>
    <string name="gpstracker_tile_download_south_lat">Southern most Latitude</string>
    <string name="gpstracker_tile_download_west_lon">Western most Longitude</string>
    <string name="gpstracker_tile_download_east_lon">Eastern most Longitude</string>
    <string name="gpstracker_tile_download_zoom_level_min">Zoom Level Min</string>
...
